# SuperNautic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SuperNautic/: CMakeLists.txt
SuperNautic/ModelConverter/: CMakeLists.txt
SuperNautic/ModelConverter/src/: fileOutputFuncs.cpp  fileOutputFuncs.h  main.cpp  mathConverterFuncs.cpp  mathConverterFuncs.h  stringFuncs.cpp  stringFuncs.h
SuperNautic/SuperNautic_Game/: CMakeLists.txt  Mesh.h  ModelLoader.h  config.cfg  segmentinfos.txt
SuperNautic/SuperNautic_Game/src/: Log.cpp  Log.h  Log.hpp  main.cpp
SuperNautic/SuperNautic_Game/src/Core/: ApplicationContext.hpp  ApplicationState.hpp  Asset.hpp  Asset.inl  AssetCache.hpp  AssetCache.inl  AudioHandler.cpp  AudioHandler.h  Camera.cpp  Camera.h  CollisionUtility.hpp  DebugCamera.cpp  DebugCamera.hpp  Game.cpp  Game.h  Game.hpp  GuiButton.cpp  GuiButton.hpp  GuiContainer.cpp  GuiContainer.hpp  GuiElement.hpp  HUD.cpp  HUD.hpp  Input.cpp  Input.h  Input.hpp  LoadAsset.hpp  LoadAssetFont.cpp  LoadAssetFunctions.cpp  LoadAssetFunctions.hpp  LoadAssetMesh.cpp  MainMenuApplicationState.cpp  MainMenuApplicationState.hpp  PauseMenuApplicationState.cpp  PauseMenuApplicationState.hpp  PlayApplicationState.cpp  PlayApplicationState.hpp  Player.cpp  Player.hpp  PlayerAudio.cpp  (+11 more)
SuperNautic/SuperNautic_Game/src/Core/ApplicationState/: AboutApplicationState.cpp  AboutApplicationState.hpp  ApplicationContext.hpp  ApplicationState.cpp  ApplicationState.hpp  ApplicationStateStack.cpp  ApplicationStateStack.hpp  ControlsApplicationState.cpp  ControlsApplicationState.hpp  MainMenuApplicationState.cpp  MainMenuApplicationState.hpp  MenuBackgroundApplicationState.cpp  MenuBackgroundApplicationState.hpp  OptionsApplicationState.cpp  OptionsApplicationState.hpp  PauseMenuApplicationState.cpp  PauseMenuApplicationState.hpp  PlayApplicationState.cpp  PlayApplicationState.hpp  PreGameApplicationState.cpp  PreGameApplicationState.hpp  TrackGenerationApplicationState.cpp  TrackGenerationApplicationState.h  VictoryApplicationState.cpp  VictoryApplicationState.hpp  VideoOptionsApplicationState.cpp  VideoOptionsApplicationState.hpp
SuperNautic/SuperNautic_Game/src/Core/Asset/: Asset.hpp  Asset.inl  AssetCache.hpp  AssetCache.inl  LoadAsset.hpp  LoadAssetFunctions.cpp  LoadAssetFunctions.hpp
SuperNautic/SuperNautic_Game/src/Core/Audio/: CountdownAudio.cpp  CountdownAudio.hpp  PlayerAudio.cpp  PlayerAudio.hpp  WorldAudio.cpp  WorldAudio.hpp
SuperNautic/SuperNautic_Game/src/Core/Geometric Primitives/: AABB.hpp  BoundingBox.hpp  Ray.hpp  RayIntersection.hpp  Sphere.hpp
SuperNautic/SuperNautic_Game/src/Core/Geometry/: AABB.hpp  AxisAlignedPlane.cpp  AxisAlignedPlane.hpp  BoundingBox.cpp  BoundingBox.hpp  CollisionMesh.cpp  CollisionMesh.hpp  Octree.hpp  Octree.inl  Ray.hpp  RayIntersection.hpp  Sphere.hpp
SuperNautic/SuperNautic_Game/src/Core/Gui/: Callback.hpp  Font.hpp  GuiButton.cpp  GuiButton.hpp  GuiCharacterInput.cpp  GuiCharacterInput.hpp  GuiContainer.cpp  GuiContainer.hpp  GuiElement.cpp  GuiElement.hpp  GuiHorizontalList.cpp  GuiHorizontalList.hpp  GuiPlayerJoin.cpp  GuiPlayerJoin.hpp  GuiPlayerJoinContainer.cpp  GuiPlayerJoinContainer.hpp  GuiShipCard.cpp  GuiShipCard.hpp  GuiSlider.cpp  GuiSlider.hpp  GuiText.cpp  GuiText.hpp  GuiTextInput.cpp  GuiTextInput.hpp  GuiTexture.cpp  GuiTexture.hpp  GuiToolTip.cpp  GuiToolTip.hpp  GuiTrackGenerator.cpp  GuiTrackGenerator.hpp  GuiTrackGeneratorControls.cpp  GuiTrackGeneratorControls.hpp  HUD.cpp  HUD.hpp  IsActiveMenuItem.hpp  IsSelectable.hpp  Menu.cpp  Menu.hpp  MenuBackground.cpp  MenuBackground.hpp  (+23 more)
SuperNautic/SuperNautic_Game/src/Core/Io/: ConfigFile.cpp  ConfigFile.hpp  Input.cpp  Input.hpp  Log.cpp
SuperNautic/SuperNautic_Game/src/Core/Track/: ObstacleHandler.cpp  ObstacleHandler.hpp  ObstacleInstance.cpp  ObstacleInstance.hpp  Segment.cpp  Segment.h  Segment.hpp  SegmentHandler.cpp  SegmentHandler.h  SegmentHandler.hpp  SegmentInfo.cpp  SegmentInfo.hpp  SegmentInstance.cpp  SegmentInstance.hpp  Track.cpp  Track.hpp  TrackProgression.cpp  TrackProgression.hpp
SuperNautic/SuperNautic_Game/src/Core/Utility/: AudioOptions.cpp  AudioOptions.hpp  Camera.cpp  Camera.h  CollisionUtility.cpp  CollisionUtility.hpp  DampedSpringRotatedVector.cpp  DampedSpringRotatedVector.hpp  DebugCamera.cpp  DebugCamera.hpp  FileUtility.cpp  FileUtility.hpp  GeometryUtility.cpp  GeometryUtility.hpp  ShakeOffset.cpp  ShakeOffset.hpp  SpringRotatedVector.cpp  SpringRotatedVector.hpp  SpringSmoothedValue.cpp  SpringSmoothedValue.hpp  SpringTranslatedVector.cpp  SpringTranslatedVector.hpp  TimeSummary.cpp  TimeSummary.hpp  Timer.cpp  Timer.hpp  TrackPresetManager.cpp  TrackPresetManager.hpp  Utilities.cpp  Utilities.hpp  VideoOptions.cpp  VideoOptions.hpp  WindowConstants.hpp
SuperNautic/SuperNautic_Game/src/Core/World/: Player.cpp  Player.hpp  Seaweed.cpp  Seaweed.hpp  Ship.cpp  Ship.hpp  VideoOptions.hpp  World.cpp  World.hpp
SuperNautic/SuperNautic_Game/src/GFX/: Box.cpp  Box.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  DirLight.cpp  DirLight.h  ForwardRenderer.cpp  ForwardRenderer.hpp  Framebuffer.cpp  Framebuffer.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  PointLight.cpp  PointLight.hpp  Renderable3D.cpp  Renderable3D.hpp  Renderer.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp  ShaderLoader.cpp  ShaderLoader.h  ShaderLoader.hpp  Texture.cpp  Texture.hpp  TexturedModel.cpp  TexturedModel.hpp  Transform3D.cpp  Transform3D.hpp  Transformable3D.cpp  Transformable3D.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexDataImporter.cpp  VertexDataImporter.h  VertexDataImporter.hpp
SuperNautic/SuperNautic_Game/src/GFX/Lighting/: DirLight.cpp  DirLight.h  PointLight.cpp  PointLight.hpp
SuperNautic/SuperNautic_Game/src/GFX/Rendering/: Box.cpp  Box.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  Framebuffer.cpp  Framebuffer.hpp  Line.cpp  Line.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  RenderPass.cpp  (+18 more)
SuperNautic/SuperNautic_Game/src/ecs/: CMakeLists.txt
(+232 files in other folders)
