add_executable(SuperNautic

./src/main.cpp
./src/GFX/Lighting/PointLight.cpp
./src/GFX/Lighting/DirLight.cpp
./src/GFX/Rendering/Transformable3D.cpp
./src/GFX/Rendering/ParticleRenderer.cpp
./src/GFX/Rendering/Framebuffer.cpp
./src/GFX/Rendering/Renderable3D.cpp
./src/GFX/Rendering/SfmlRenderer.cpp
./src/GFX/Rendering/DeferredRenderer.cpp
./src/GFX/Rendering/RenderPass.cpp
./src/GFX/Rendering/ZoneRenderer.cpp
./src/GFX/Rendering/Line.cpp
./src/GFX/Rendering/WindowRenderer.cpp
./src/GFX/Rendering/ViewportPipeline.cpp
./src/GFX/Rendering/ScreenQuad.cpp
./src/GFX/Rendering/TransparentRenderer.cpp
./src/GFX/Rendering/ForwardRenderer.cpp
./src/GFX/Rendering/Box.cpp
./src/GFX/Resources/VertexArrayObject.cpp
./src/GFX/Resources/TexturedModel.cpp
./src/GFX/Resources/Material.cpp
./src/GFX/Resources/ParticleSystem.cpp
./src/GFX/Resources/Shader.cpp
./src/GFX/Resources/Loaders/ModelLoader.cpp
./src/GFX/Resources/Loaders/ShaderLoader.cpp
./src/GFX/Resources/Loaders/MaterialLoader.cpp
./src/GFX/Resources/Loaders/VertexDataImporter.cpp
./src/GFX/Resources/Texture.cpp
./src/GFX/Resources/Model.cpp
./src/Core/ApplicationState/PauseMenuApplicationState.cpp
./src/Core/ApplicationState/PlayApplicationState.cpp
./src/Core/ApplicationState/PreGameApplicationState.cpp
./src/Core/ApplicationState/MainMenuApplicationState.cpp
./src/Core/ApplicationState/VictoryApplicationState.cpp
./src/Core/ApplicationState/AboutApplicationState.cpp
./src/Core/ApplicationState/ApplicationState.cpp
./src/Core/ApplicationState/ApplicationStateStack.cpp
./src/Core/ApplicationState/OptionsApplicationState.cpp
./src/Core/ApplicationState/ControlsApplicationState.cpp
./src/Core/Gui/GuiCharacterInput.cpp
./src/Core/Gui/GuiToolTip.cpp
./src/Core/Gui/SceneNode.cpp
./src/Core/Gui/GuiText.cpp
./src/Core/Gui/MenuBackground.cpp
./src/Core/Gui/TrackPreview.cpp
./src/Core/Gui/GuiElement.cpp
./src/Core/Gui/GuiButton.cpp
./src/Core/Gui/GuiTrackGeneratorControls.cpp
./src/Core/Gui/GuiPlayerJoin.cpp
./src/Core/Gui/GuiSlider.cpp
./src/Core/Gui/Timer.cpp
./src/Core/Gui/GuiShipCard.cpp
./src/Core/Gui/GuiTextInput.cpp
./src/Core/Gui/GuiContainer.cpp
./src/Core/Gui/Progression.cpp
./src/Core/Gui/GuiHorizontalList.cpp
./src/Core/Gui/GuiPlayerJoinContainer.cpp
./src/Core/Gui/HUD.cpp
./src/Core/Gui/GuiTexture.cpp
./src/Core/Gui/GuiTrackGenerator.cpp
./src/Core/Io/ConfigFile.cpp
./src/Core/Io/Input.cpp
./src/Core/Io/Log.cpp
./src/Core/Geometry/CollisionMesh.cpp
./src/Core/Geometry/BoundingBox.cpp
./src/Core/Geometry/AxisAlignedPlane.cpp
./src/Core/World/Ship.cpp
./src/Core/World/Player.cpp
./src/Core/World/Seaweed.cpp
./src/Core/World/World.cpp
./src/Core/Audio/CountdownAudio.cpp
./src/Core/Audio/WorldAudio.cpp
./src/Core/Audio/PlayerAudio.cpp
./src/Core/Game.cpp
./src/Core/Track/SegmentHandler.cpp
./src/Core/Track/Segment.cpp
./src/Core/Track/SegmentInstance.cpp
./src/Core/Track/ObstacleInstance.cpp
./src/Core/Track/SegmentInfo.cpp
./src/Core/Track/ObstacleHandler.cpp
./src/Core/Track/TrackProgression.cpp
./src/Core/Track/Track.cpp
./src/Core/Utility/FileUtility.cpp
./src/Core/Utility/SpringTranslatedVector.cpp
./src/Core/Utility/ShakeOffset.cpp
./src/Core/Utility/SpringRotatedVector.cpp
./src/Core/Utility/Utilities.cpp
./src/Core/Utility/VideoOptions.cpp
./src/Core/Utility/DebugCamera.cpp
./src/Core/Utility/TrackPresetManager.cpp
./src/Core/Utility/SpringSmoothedValue.cpp
./src/Core/Utility/GeometryUtility.cpp
./src/Core/Utility/CollisionUtility.cpp
./src/Core/Utility/Camera.cpp
./src/Core/Utility/AudioOptions.cpp
./src/Core/Asset/LoadAssetFunctions.cpp
)

target_link_libraries(SuperNautic
  glm
  sfml-graphics
  sfml-audio
  # sfml-main
  sfml-window
  glew
  pthread
)

target_include_directories(SuperNautic
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_SOURCE_DIR}/SuperNautic/thirdparty/assimp/include
    ${CMAKE_BINARY_DIR}/SuperNautic/thirdparty/assimp/include

    ${CMAKE_SOURCE_DIR}/SuperNautic/thirdparty/glm

)

target_compile_features(SuperNautic
  PUBLIC
    cxx_std_14
)

target_compile_definitions(SuperNautic
  PUBLIC
    GLM_ENABLE_EXPERIMENTAL
)
